@@ -1,6 +1,11 @@
 2005-10-03  Ross Burton  <ross@burtonini.com>
 
 	* settings-daemon.c:
+	Programatically monitor keys.
+
+2005-10-03  Ross Burton  <ross@burtonini.com>
+
+	* settings-daemon.c:
 	* Makefile.am:
 	Tweak the code a bit.
 
